# data-retrieval-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: high_level_architecture.puml
src/: __init__.py  config.py  main.py
src/services/: openai_pandasql_service.py  openai_prompts.py  pandas_excel_data_service.py
src/services/abstract/: __init__.py  llm_query_service.py  tabular_data_service.py
src/use_cases/: ai_extraction_pipeline_query_use_case.py  helpers.py
src/use_cases/abstract/: use_case.py
src/use_cases/decorators/: __init__.py  error_handler.py
src/use_cases/request_models/: ai_extraction_pipeline_query_request_model.py  request_model.py
src/use_cases/response_models/: ai_extraction_pipeline_query_response_model.py  response_model.py
tests/: fakes.py  test_ai_extraction_pipeline_query_use_case.py  test_pandas_excel_data_service.py  test_sql_executor.py
