[tool.poetry]
name = "data-retrieval-agent"
version = "0.1.0"
description = "CLI AI data analyst PoC using pandas, pandasql, and OpenAI."
authors = ["PoC Team <team@example.com>"]
readme = "README.md"
packages = [{ include = "data_retrieval_agent", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = "^2.2.0"
openpyxl = "^3.1.0"
pandasql = "^0.7.3"
python-dotenv = "^1.0.1"
rich = "^13.7.0"
openai = "^1.0.0"
typer = "^0.12.0"
click = ">=8.1.7,<8.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[tool.poetry.scripts]
data-retrieval-agent = "data_retrieval_agent.main:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
files = ["src", "tests"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
pretty = true
show_error_codes = true
ignore_missing_imports = true
