[tool.poetry]
name = "data-retrieval-agent"
version = "0.1.0"
description = "CLI AI data analyst PoC using pandas, pandasql, and OpenAI."
authors = ["PoC Team <team@example.com>"]
readme = "README.md"
packages = [
    { include = "services", from = "src" },
    { include = "use_cases", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = "^2.2.0"
openpyxl = "^3.1.0"
pandasql = "^0.7.3"
python-dotenv = "^1.0.1"
rich = "^13.7.0"
openai = "^1.0.0"
typer = "^0.12.0"
click = ">=8.1.7,<8.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
